Test Org - Speridian/src/objects/BA_Contract_Riders__c.object
<CustomObject>
    <fields>
        <fullName>ba_AnniversaryDate__c</fullName>
        <label>Anniversary Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DependentCoverage__c</fullName>
        <label>Dependent Coverage</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_LOB__c</fullName>
        <label>LOB</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contract and  Riders</label>
    <nameField>
        <displayFormat>CRID-{0000}</displayFormat>
        <label>Contract and  Riders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract and  Riders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>